--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ __pycache__/TreeVisitor.cpython-39.pyc
 .vscode/dryrun.log
 __pycache__/EvalVisitor.cpython-39.pyc
 
+__pycache__/test.cpython-39.pyc
+__pycache__/EvalVisitor.cpython-39.pyc
